--- a/internal/ui/components/preview/index.templ
+++ b/internal/ui/components/preview/index.templ
@@ -78,6 +78,7 @@ templ Index() {
 					@IndexCard(ComponentInfo{Name: "Pagination", Href: "/preview/component/pagination"})
 					@IndexCard(ComponentInfo{Name: "Table", Href: "/preview/component/table"})
 					@IndexCard(ComponentInfo{Name: "Tabs", Href: "/preview/component/tabs"})
+					@IndexCard(ComponentInfo{Name: "API Reference", Href: "/preview/component/api-reference"})
 				</div>
 			</div>
 		</body>
