--- a/internal/ui/components/preview/index.templ
+++ b/internal/ui/components/preview/index.templ
@@ -79,6 +79,7 @@ templ Index() {
 					@IndexCard(ComponentInfo{Name: "Table", Href: "/preview/component/table"})
 					@IndexCard(ComponentInfo{Name: "Tabs", Href: "/preview/component/tabs"})
 					@IndexCard(ComponentInfo{Name: "API Reference", Href: "/preview/component/api-reference"})
+					@IndexCard(ComponentInfo{Name: "Env Editor", Href: "/preview/component/env-editor"})
 				</div>
 			</div>
 		</body>
