--- a/internal/ui/pages/tabs/code.templ
+++ b/internal/ui/pages/tabs/code.templ
@@ -1,4 +1,4 @@
-package components
+package tabs
 
 import (
 	"fmt"
@@ -6,6 +6,8 @@ import (
 	"github.com/dimiro1/faas-go/internal/ui/components/card"
 	"github.com/dimiro1/faas-go/internal/ui/components/icons"
 )
+
+// This is now the source of truth for the Code tab page (moved from components)
 
 type CodeFile struct {
 	Filename string
