--- a/internal/ui/pages/functions/execution_details.templ
+++ b/internal/ui/pages/functions/execution_details.templ
@@ -11,8 +11,8 @@ import (
 templ PreviewExecutionDetails() {
 	@components.Layout("FaaS Console - Execution Details") {
 		@navbar.Header("details", "hello")
-		@components.FunctionDetailsView(
-			components.FunctionDetails{ID: "fn_8s7d6f87", Name: "hello", Description: "This is just a hello function", Enabled: true},
+		@FunctionDetailsView(
+			FunctionDetails{ID: "fn_8s7d6f87", Name: "hello", Description: "This is just a hello function", Enabled: true},
 			[]tabs.Tab{
 				{ID: "metrics", Name: "Metrics", Href: "/functions/hello", Active: false},
 				{ID: "code", Name: "Code", Href: "/functions/hello/code", Active: false},
