--- a/internal/ui/pages/execution_details/execution_details.templ
+++ b/internal/ui/pages/execution_details/execution_details.templ
@@ -1,18 +1,19 @@
-package functions
+package execution_details
 
 import (
 	"github.com/dimiro1/faas-go/internal/ui/components"
 	"github.com/dimiro1/faas-go/internal/ui/components/log"
 	"github.com/dimiro1/faas-go/internal/ui/components/navbar"
 	"github.com/dimiro1/faas-go/internal/ui/components/tabs"
-	pagetabs "github.com/dimiro1/faas-go/internal/ui/pages/tabs"
+	"github.com/dimiro1/faas-go/internal/ui/pages/function_details"
+	"github.com/dimiro1/faas-go/internal/ui/pages/executions"
 )
 
 templ PreviewExecutionDetails() {
 	@components.Layout("FaaS Console - Execution Details") {
 		@navbar.Header("details", "hello")
-		@FunctionDetailsView(
-			FunctionDetails{ID: "fn_8s7d6f87", Name: "hello", Description: "This is just a hello function", Enabled: true},
+		@function_details.FunctionDetailsView(
+			function_details.FunctionDetails{ID: "fn_8s7d6f87", Name: "hello", Description: "This is just a hello function", Enabled: true},
 			[]tabs.Tab{
 				{ID: "metrics", Name: "Metrics", Href: "/functions/hello", Active: false},
 				{ID: "code", Name: "Code", Href: "/functions/hello/code", Active: false},
@@ -23,7 +24,7 @@ templ PreviewExecutionDetails() {
 			false,
 		) {
 			@tabs.TabContent(tabs.TabContentProps{ID: "executions", Active: true}) {
-				@pagetabs.ExecutionDetails(pagetabs.ExecutionDetailsData{
+				@executions.ExecutionDetails(executions.ExecutionDetailsData{
 					ID:       "exec_12345abcde",
 					Status:   "SUCCESS",
 					Duration: "12ms",
